--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@react-three/fiber": "^8.17.10",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-globe.gl": "^2.27.4",
+    "react-icon-cloud": "^4.1.4",
     "react-responsive": "^10.0.0",
     "three": "^0.170.0"
   },
