--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
+    "@vercel/analytics": "^1.3.2",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
     "next-themes": "^0.4.3",
